# x2645_codec

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  format.bat  format.sh
script/: check_commit.py  format_code.py
script/cmake/: find_x264.cmake  find_x265.cmake
src/: Codec.cpp  Codec.h  X264Encoder.hpp  X265Encoder.hpp  version.rc.in
src/adaption/: Logging.cpp  Logging.h
